# devops

./: .gitignore  CI.md  LICENSE  README.md  lint_reqirements.txt
.github/workflows/: check-code.yml  test-code.yml
ansible/: ANSIBLE.md  development.txt
ansible/playbooks/: deploy.yml  docker-compose.yml
ansible/roles/startapp/defaults/: main.yml
ansible/roles/startapp/handlers/: main.yml
ansible/roles/startapp/meta/: main.yml
ansible/roles/startapp/tasks/: docker-compose.yml  main.yml
ansible/roles/startapp/tests/: test.yml
ansible/roles/startapp/vars/: main.yml
app_python/: DOCKER.md  Dockerfile  PYTHON.md  pyproject.toml  server.py  test_connection.py  visits.txt
app_python/static/styles/: master.css
app_python/templates/: index.html  visits.html
app_python/tests/: requirements.txt  test_connection.py  test_time.py
jenkins/: Dockerfile  Jenkinsfile
k8s/: 11.md  12.md  13.md  14.md  README.md  deployment.yml  moscow-time-0.1.0.tgz  service.yml
k8s/moscow-time/: Chart.yaml  values.yaml
k8s/moscow-time/templates/: config.yaml  deployment.yaml  secrets.yaml  service.yaml  statefulset.yaml
monitoring/: LOGGING.md  docker-compose.yaml  prometheus.yml  promtail.yml
terraform/: TF.md
terraform/aws/: conf.tf
terraform/virtualbox/: conf.tf
tests/: test_connection.py  test_time.py
