[tool.poetry]
name = "Moscow-time"
version = "0.1.0"
description = ""
authors = ["InnoZhan <zhandos1609@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytz = "^2021.1"
Flask = "^2.0.1"
pylint = "^2.10.2"
darglint = "^1.8.0"
lice = "^0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
